kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-go
  labels:
    app: example-go
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-go
  template:
    metadata:
      labels:
        app: example-go
    spec:
      containers:
      - name: example-go
        image: registry.localhost:5000/example-go:1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "50Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: example-go
spec:
  selector:
    app: example-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
