kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  tls:
  - hosts:
    - 4mbr0s.local
    secretName: example-go-tls
  rules:
    - host: 4mbr0s.local
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: example-go
              port:
                number: 80
