kubernetes/ingress.yml

# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-go-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: example-go.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-go
            port:
              number: 80
